<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListPreference
        android:title="@string/pref_country_label"
        android:key="@string/pref_country_key"
        android:defaultValue="@string/pref_country_default_value"
        android:entryValues="@array/countryCodes"
        android:entries="@array/countryNames" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notification_drawer_label"
        android:key="@string/pref_enable_notification_drawer_key"
        android:summaryOff="@string/pref_not_enabled_text"
        android:summaryOn="@string/pref_enabled_text"
        android:defaultValue="@string/pref_enable_notification_drawer_default_value" />

    <CheckBoxPreference
        android:title="@string/pref_enable_notification_lockscreen_label"
        android:key="@string/pref_enable_notification_lockscreen_key"
        android:summaryOff="@string/pref_not_enabled_text"
        android:summaryOn="@string/pref_enabled_text"
        android:defaultValue="@string/pref_enable_notification_lockscreen_default_value" />

</PreferenceScreen>